# bot_offer_news

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
nginx/: nginx.conf
src/bot_manager/: main.py  routers.py  settings.py
src/bot_offer_news/: __main__.py  api.py  bot_news.py  settings.py
src/bot_offer_news/db/gate/: base.py  bot.py
src/bot_offer_news/db/migrations/: env.py
src/bot_offer_news/db/migrations/versions/: ddfa2c854b13_added_bot_table.py
src/bot_offer_news/db/models/: __init__.py  bot.py
src/bot_offer_news/di/: db.py  gateway.py
src/bot_offer_news/dto/: bot.py
src/bot_offer_news/routers/: info.py  news.py
src/bot_offer_news/services/: bot.py
src/bot_offer_news/static/: action_complete.html  add_bot_form.html  delete_bot_form.html
src/bot_offer_news/utils/: bot.py  db.py
